--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.0.0",
