cadastro de usuario-backend - incompleto

--- a/back/package.json
+++ b/back/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
@@ -15,5 +17,3 @@
     "dev": "nodemon ./src/app.js"
   }
 }
-  
-
