--- a/back/package.json
+++ b/back/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "back": "file:",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase": "^11.8.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
