--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "sweetalert2": "^11.21.2",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
